--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,14 +1,13 @@
 version: '3.8'
 services:
   app:
-    image: python:3.10.7-buster
+    build: .
     volumes:
       - "$PWD:/usr/src/app"
     working_dir: "/usr/src/app"
     env_file: .env
     command: /bin/bash
     tty: true
-    network_mode: "host"
     ports:
       - 0.0.0.0:5000:5000
     expose:
@@ -19,7 +18,7 @@ services:
 
   db:
     ipc: host
-    image: postgres:11.9-alpine
+    image: postgres:14.5-bullseye
     ports:
       - "5432:5432"
     environment:
@@ -28,9 +27,12 @@ services:
       - POSTGRES_USER=carleyfamily_admin
       - POSTGRES_DB=carleyfamily_development
     volumes:
-      - "./dbdata:/var/lib/postgresql/data"
+      - postgres_data:/var/lib/postgresql/data
 
   redis:
     image: redis:5.0.12-alpine
     ports:
       - "6379:6379"
+
+volumes:
+  postgres_data:
